Made GroupTable  extends AbstractTable for reducing amount of code